Resolved horizontal overflow issue on mobile.

--- a/css/landing.css
+++ b/css/landing.css
@@ -493,7 +493,6 @@ a:focus {
 /*Custom*/
 .alternate-section-2 {
     width: 100%;
-    padding: 50px 0;
     color: #fff;
     background: url(../img/alternate-bg-2.png) no-repeat center center scroll;
     background-color: #000;
