--- a/css/theme.css
+++ b/css/theme.css
@@ -15,13 +15,14 @@ body {
     color: #fff;
     background-color: #000;
     overflow-x:hidden;
-       height: 100%;
-
+    height: 100%;
 }
 
 html {
     width: 100%;
+    max-width: 100%;
     height: 100%;
+    
 }
 
 .content-section {
@@ -60,8 +61,7 @@ h6 {
 /*Paragraph and link style rules*/
 
 p {
-     margin: 0 0 25px;
-
+    margin: 0 0 25px;
     font-size: 20px;
     line-height: 1.5;
 }
